--- a/hello/templates/hello/base.html
+++ b/hello/templates/hello/base.html
@@ -9,12 +9,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"> -->
-
-    <!-- <link rel="stylesheet" type="text/css" href ="{% static 'hello/main.css' %}"> -->
 
     {% if title %}
-      <title>HKScan dashboard </title>
+      <title>Junction dashboard - {{ title }}</title>
     {% else %}
       <title>Junction dashboard</title>
     {% endif %}
@@ -24,7 +21,7 @@
       <!-- <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top"> -->
       <nav style="background-color: #1e87d1;" class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">HK Scan</a>
+          <a class="navbar-brand mr-4" href="/">HKScan</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
