--- a/hello/templates/hello/beef.html
+++ b/hello/templates/hello/beef.html
@@ -38,9 +38,10 @@
     </br>
     <h2>Product facts:</h2>
     <ul>
-      <li>100% Finnish</li>
-      <li>Ethically produced meat</li>
-      <li>20% less Co2 emissions than the Finnish average in production cycle</li>
+      <li>100% finnish-made</li>
+      <li>ethic</li>
+      <li>somewhere else</li>
+      <li>and elsewhere</li>
     </ul>
     </br>
     <hr style="width:60%;text-align:left;margin-left:0">
@@ -55,19 +56,18 @@
     </br>
 
     <h5>Beef Water Use Percent per Farm:</h5>
-    <p style="width: 500px;">The farm this beef was produced on has contributed to 6.7% of the total water usage, which is 40% less than average.</p>
+    <p style="width: 500px;">The farm this product was produced on has contributed 16.8% of the total CO2 produced by the production, which is n less than average.</p>
     <iframe style="zoom: 0.45" width="900" height="800" frameborder="0" scrolling="no" src="//plotly.com/~tuantnguyen/23.embed"></iframe>
 
     <h5>Contribution of each factor to CO2 footprints of beef production:</h5>
-    <p style="width: 500px;">The farm this product was produced on has contributed 16.8% of the total CO2 produced by the production, which is 20% less than average.</p>
+    <p style="width: 500px;">The farm this product was produced on has contributed 16.8% of the total CO2 produced by the production, which is n less than average.</p>
     <iframe style="zoom: 0.45" width="900" height="800" frameborder="0" scrolling="no" src="//plotly.com/~tuantnguyen/17.embed"></iframe>
     </br>
 
-    <h5>Number of animals vs Water used:</h5>
-    <p style="width: 500px;">The farm this beef was produced on has a low number of animals compared to its water usage.</p>
+    <h5>Number of animlas vs Water used:</h5>
+    <p style="width: 500px;">The farm this product was produced on has contributed 16.8% of the total CO2 produced by the production, which is n less than average.</p>
     <iframe style="zoom: 0.45" width="900" height="800" frameborder="0" scrolling="no" src="//plotly.com/~tuantnguyen/11.embed"></iframe>    
     
-
 
     
     </br>
