--- a/hello/templates/hello/products.html
+++ b/hello/templates/hello/products.html
@@ -3,8 +3,8 @@
 <h1 style="color: #444444;">Products available at your store:</h1>
 <br />
 {% for post in posts %}
-<h2 style="color: #444444;"> {{post.product_name}}</h2>
-<table style="">
+<a href="/{{ post.productType }}" target="_blank"><h2 style="color: #444444;"> {{post.product_name}}</h2></a>
+<table>
     <tr>
         <th></th>
         <th></th>
